maintenance/maintenance-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: maintenance
    app.kubernetes.io/instance: maintenance
    app.kubernetes.io/component: maintenance
  name: maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: maintenance
      app.kubernetes.io/instance: maintenance
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maintenance
        app.kubernetes.io/instance: maintenance
        app.kubernetes.io/component: maintenance
    spec:
      containers:
        - image: nginx: 1.28.0-alpine-perl
          imagePullPolicy: IfNotPresent
          name: maintenance
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: vhost-config
              subPath: default.conf
            - mountPath: /usr/share/nginx/html/index.html
              name: html-content
              subPath: index.html
      volumes:
        - configMap:
            defaultMode: 420
            name: maintenance-vhost-config
          name: vhost-config
        - configMap:
            defaultMode: 420
            name: maintenance-html-content
          name: html-content
