maintenance/maintenance-service.yaml
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: maintenance
    app.kubernetes.io/instance: maintenance
    app.kubernetes.io/component: maintenance
  name: maintenance
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: maintenance
    app.kubernetes.io/instance: maintenance
  type: ClusterIP
