maintenance/maintenance-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: maintenance
    app.kubernetes.io/instance: maintenance
    app.kubernetes.io/component: maintenance
  name: maintenance-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: maintenance.local
      http:
        paths:
          - backend:
              service:
                name: maintenance-service
                port:
                  number: 80
            path: /
            pathType: Prefix
